<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:weightSum="3">

    <ImageView
        android:id="@+id/mobile_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".5"
        android:contentDescription="@string/image" />


    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.3"
        android:padding="10dp">

        <TextView
            android:id="@+id/mobile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/mobile_e4_plus"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mobile_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobile_name"
            android:layout_margin="5dp"
            android:ellipsize="end"
            android:lines="2"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobile_description">

            <TextView
                android:id="@+id/price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="5dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="5dp"
                android:text="@string/rating"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>


    <ImageView
        android:id="@+id/favourite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight=".25"
        android:background="@drawable/btn_rating_star_off_disabled_focused_holo_dark"
        android:contentDescription="@string/image" />
</LinearLayout>