<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:text="@string/sort"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <View
        android:id="@+id/title_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title"
        android:background="@color/grey" />


    <TextView
        android:id="@+id/low_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_divider"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/low_to_high"
        android:textAlignment="center"
        android:textColor="@color/sort_color"
        android:textSize="20sp" />

    <View
        android:id="@+id/low_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/low_high"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/high_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/low_divider"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/high_to_low"
        android:textAlignment="center"
        android:textColor="@color/sort_color"
        android:textSize="20sp" />

    <View
        android:id="@+id/high_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/high_low"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/high_divider"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/rating_low"
        android:textAlignment="center"
        android:textColor="@color/sort_color"
        android:textSize="20sp" />

    <View
        android:id="@+id/rating_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rating"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rating_divider"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/sort_color"
        android:textSize="20sp" />
</RelativeLayout>
