<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_connection"
            android:textColor="@color/reward_txt_color"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message1Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/wait_while_try"
            android:textColor="@color/reward_txt_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/message2Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/reconnect"
            android:textColor="@color/reward_txt_color"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>